[tool.poetry]
name = "py-api-live"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "*"
httpie = "*"
flask-pydantic-spec = "*"
tinydb = "*"
pydantic = "*"

[tool.poetry.dev-dependencies]
httpie = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
